--- a/WRH_Engine/Modules/TORNADO/css/startmin.css
+++ b/WRH_Engine/Modules/TORNADO/css/startmin.css
@@ -23,7 +23,7 @@ body {
         position: inherit;
         // margin-left: 250px;
         text-align: center;
-        padding: 30px 30px 0 30px;
+        padding: 0% 30px 0 30px;
         border-left: 1px solid #e7e7e7;
     }
 }
