--- a/WRH_Engine/Modules/TORNADO/css/startmin.css
+++ b/WRH_Engine/Modules/TORNADO/css/startmin.css
@@ -13,7 +13,7 @@ body {
 }
 
 #page-wrapper {
-    padding: 30px 15px 0 15px;
+    padding: 5% 15px 0 15px;
     min-height: 568px;
     background-color: #fff;
 }
