--- a/WRH_Engine/Modules/TORNADO/css/style.css
+++ b/WRH_Engine/Modules/TORNADO/css/style.css
@@ -25,7 +25,8 @@
 
 .line {
     height: 1px;
-    background: black;
-    width: 90%;
+    background: gray;
+    width: 80%;
     font-size: 1px; /* IE 6 */
+    margin: auto;
 }
